--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "express": "^4.18.2",
         "joi": "^17.12.1",
         "jsonwebtoken": "^9.0.2",
+        "node-cache": "^5.1.2",
         "nodemon": "^3.0.3"
     },
     "engines": {
